--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,4 +1,4 @@
-MONGO_URI = mongodb+srv://zevR:zevius260@zevr.0ecgd.mongodb.net/
+MONGO_URI = mongodb+srv://zevR:<db.Pass>@zevr.0ecgd.mongodb.net/
 
 
 FRONTEND_URL = http://localhost:5173
